--- a/public/assets/css/soft-ui-dashboard.css
+++ b/public/assets/css/soft-ui-dashboard.css
@@ -5645,7 +5645,7 @@
   .page-link.active,
   .active>.page-link {
     background: transparent;
-      background-image: linear-gradient(310deg, #ab0033, #ea0606);
+      background-image: linear-gradient(310deg, #ab0033, #ab0033);
       box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .09), 0 2px 3px -1px rgba(0, 0, 0, .07);
       color: #fff;
       border: none;
@@ -21066,7 +21066,7 @@
   }
 
   .card.card-background.card-background-mask-danger:after {
-    background-image: linear-gradient(310deg, #ea0606 0%, #ff667c 100%);
+    background-image: linear-gradient(310deg, #ab0033 0%, #950c0c 100%);
     opacity: .85;
   }
 
@@ -21740,7 +21740,7 @@
   }
 
   .bg-gradient-primary {
-    background-image: linear-gradient(310deg, #7928CA 0%, #FF0080 100%);
+    background-image: linear-gradient(310deg, #ab0033 0%, #ab0033 100%);
   }
 
   .bg-gradient-secondary {
@@ -22598,7 +22598,7 @@
     top: 0;
     bottom: 0;
     width: 100%;
-    max-width: 15.625rem !important;
+    max-width: 12rem !important;
     overflow-y: auto;
     padding: 0;
     box-shadow: none;
@@ -23247,7 +23247,7 @@
     }
 
     .sidenav.fixed-start~.main-content {
-      margin-left: 17.125rem;
+      margin-left: 12rem;
     }
 
     .sidenav.fixed-end~.main-content {
